# voxtral-int4

./: Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: docker-build.yml
